--- a/V2rayNG/app/src/main/res/values/colors.xml
+++ b/V2rayNG/app/src/main/res/values/colors.xml
@@ -1,24 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPing">#009966</color>
-    <color name="colorPingRed">#FF0099</color>
-    <color name="colorSubscription">#247BA0</color>
-    <color name="colorSelected">#009966</color>
-    <color name="colorUnselected">#999999</color>
+    <color name="colorPing">#03A9F4</color>
+    <color name="colorPingRed">#03A9F4</color>
+    <color name="colorSubscription">#03A9F4</color>
+    <color name="colorSelected">#03A9F4</color>
+    <color name="colorUnselected">#6F6C6C</color>
     <color name="colorWhite">#CFD8DC</color>
     <color name="colorBlack">#212121</color>
 
-    <!--    <color name="colorPrimary">#008577</color>-->
-    <!--    <color name="colorPrimaryDark">#00574B</color>-->
-    <color name="colorPrimary">#2B2B2B</color>
-    <color name="colorPrimaryDark">#161616</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#fff</color>
+    <color name="colorPrimaryDark">#eee</color>
+    <color name="colorAccent">#03A9F4</color>
+    <color name="colorAccentTransparent">#4d03A9F4</color>
     <color name="colorBg">#FFFFFF</color>
     <color name="colorText">#000000</color>
-
-    <color name="colorPrimaryByDark">#2B2B2B</color>
-    <color name="colorPrimaryDarkByDark">#161616</color>
-    <color name="colorAccentByDark">#12976F</color>
-    <color name="colorBgByDark">#252525</color>
-    <color name="colorTextByDark">#CCCCCC</color>
 </resources>
