--- a/V2rayNG/app/src/main/res/layout/nav_header.xml
+++ b/V2rayNG/app/src/main/res/layout/nav_header.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/nav_header_bg"
+    android:background="@color/colorAccent"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -20,7 +20,8 @@
         android:src="@drawable/ic_launcher"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/app_name" />
 
     <TextView
         android:id="@+id/textView"
@@ -29,9 +30,10 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:textStyle="bold"
         android:text="@string/app_name"
         android:textColor="@color/white"
-        android:textSize="15sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
