--- a/V2rayNG/app/src/main/res/values-fa/strings_local.xml
+++ b/V2rayNG/app/src/main/res/values-fa/strings_local.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources >
     <string name="login">LOGIN</string>
     <string name="create_account">Create account</string>
     <string name="do_not_have_an_account">Do not have an account?</string>
@@ -8,10 +8,10 @@
     <string name="enter_user_name">Enter User Name</string>
     <string name="enter_password">Enter Password</string>
     <string name="coin_error">سکه های شما برای خرید این سرور کافی نیست. میتوانید با دیدن ویدئو های تبلیغاتی سکه های خود را افزایش دهید</string>
-    <string name="connection_stoped">اتصال متوقف شد!</string>
+    <string name="connection_stopped">اتصال متوقف شد!</string>
     <string name="connection_start_fail">اتصال ناموفق!</string>
-    <string name="ping_complated">پینگ انجام شد.</string>
-    <string name="conecting">در حال اتصال…</string>
+    <string name="ping_completed">پینگ انجام شد.</string>
+    <string name="connecting">در حال اتصال…</string>
     <string name="diamond_not_title">کمبود الماس</string>
     <string name="btn_accept_policy">میپذریم و ادامه میدم</string>
     <string name="policy_more_link_text">مشاهده و مطالعه سیاست ها و محرمانگی.</string>
@@ -21,5 +21,4 @@
     <string name="delete_all_invalid_server_message">در صورت تایید همه اتصالات غیر معتبر شما از بین خواهد رفت. آیا مطمئنید ؟</string>
     <string name="connection_timeout">پایان زمان اتصال!</string>
     <string name="cancel">انصراف</string>
-
 </resources>
