--- a/V2rayNG/app/src/main/res/values-night/colors.xml
+++ b/V2rayNG/app/src/main/res/values-night/colors.xml
@@ -22,6 +22,9 @@
     <color name="dark_blue_stroke">@color/dark_blue</color>
     <color name="loginIcon">@color/light_blue</color>
 
+    <color name="navigationBarColor">@color/colorPrimary</color>
+
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
