--- a/V2rayNG/app/src/main/res/values/strings_local.xml
+++ b/V2rayNG/app/src/main/res/values/strings_local.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources >
     <string name="login">LOGIN</string>
     <string name="create_account">Create account</string>
     <string name="do_not_have_an_account">Do not have an account?</string>
@@ -8,10 +8,10 @@
     <string name="enter_user_name">Enter User Name</string>
     <string name="enter_password">Enter Password</string>
     <string name="coin_error">Your diamonds are not enough to buy this server. You can increase your diamonds by watching promotional videos</string>
-    <string name="connection_stoped">Connection stopped!</string>
+    <string name="connection_stopped">Connection stopped!</string>
     <string name="connection_start_fail">Connection fail!</string>
-    <string name="ping_complated">List ping completed.</string>
-    <string name="conecting">Connecting…</string>
+    <string name="ping_completed">List ping completed.</string>
+    <string name="connecting">Connecting…</string>
     <string name="diamond_not_title">Diamond deficit</string>
     <string name="btn_accept_policy"><![CDATA[Accept & Continue]]></string>
     <string name="policy_more_link_text">For more information please read our Terms of Service and Privacy Policy.</string>
