--- a/V2rayNG/app/src/main/res/menu/menu_drawer.xml
+++ b/V2rayNG/app/src/main/res/menu/menu_drawer.xml
@@ -3,39 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group
-        android:id="@+id/group_main">
+    <group android:id="@+id/group_main">
         <item
             android:id="@+id/sub_setting"
             android:icon="@drawable/ic_subscriptions_white_24dp"
-            android:title="@string/title_sub_setting" />
-        <item
-            android:id="@+id/settings"
-            android:icon="@drawable/ic_settings_white_24dp"
-            android:title="@string/title_settings" />
-        <item
-                android:id="@+id/user_asset_setting"
-                android:icon="@drawable/ic_file_white_24dp"
-                android:title="@string/title_user_asset_setting" />
-    </group>
+            android:title="@string/title_sub_setting"
+            android:visible="false" />
 
-    <group android:id="@+id/group_id2">
+        <item
+            android:id="@+id/user_asset_setting"
+            android:icon="@drawable/ic_file_white_24dp"
+            android:title="@string/title_user_asset_setting" />
+
         <item
             android:id="@+id/promotion"
-            android:icon="@drawable/ic_whatshot_white_24dp"
+            android:icon="@drawable/ic_share_black_24dp"
             android:title="@string/title_pref_promotion" />
         <item
             android:id="@+id/logcat"
             android:icon="@drawable/ic_logcat_white_24dp"
-            android:title="@string/title_logcat" />
+            android:title="@string/title_logcat"
+            android:visible="false" />
+
+
+        <item
+            android:id="@+id/apps"
+            android:icon="@drawable/baseline_apps_24"
+            android:title="@string/title_pref_per_app_proxy" />
+
         <item
             android:id="@+id/feedback"
             android:icon="@drawable/ic_feedback_white_24dp"
-            android:title="@string/title_pref_feedback" />
+            android:title="@string/title_pref_feedback"
+            android:visible="false" />
+
+        <item
+            android:id="@+id/settings"
+            android:icon="@drawable/ic_settings_white_24dp"
+            android:title="@string/title_settings" />
+
         <!-- place holder for version text at the bottom -->
         <item
             android:id="@+id/placeholder"
             android:enabled="false"
             android:title="" />
     </group>
+
+
 </menu>
