--- a/V2rayNG/app/src/main/res/xml/pref_settings.xml
+++ b/V2rayNG/app/src/main/res/xml/pref_settings.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <CheckBoxPreference
-            android:key="pref_speed_enabled"
-            android:summary="@string/summary_pref_speed_enabled"
-            android:title="@string/title_pref_speed_enabled" />
+        android:icon="@drawable/baseline_speed_24"
+        android:key="pref_speed_enabled"
+        android:summary="@string/summary_pref_speed_enabled"
+        android:title="@string/title_pref_speed_enabled" />
 
     <CheckBoxPreference
-            android:defaultValue="true"
-            android:key="pref_sniffing_enabled"
-            android:summary="@string/summary_pref_sniffing_enabled"
-            android:title="@string/title_pref_sniffing_enabled" />
+        android:defaultValue="true"
+        android:icon="@drawable/baseline_nat_24"
+        android:key="pref_sniffing_enabled"
+        android:summary="@string/summary_pref_sniffing_enabled"
+        android:title="@string/title_pref_sniffing_enabled" />
 
     <PreferenceCategory android:title="@string/title_vpn_settings">
         <CheckBoxPreference
+            android:icon="@drawable/baseline_apps_24"
             android:key="pref_per_app_proxy"
             android:summary="@string/summary_pref_per_app_proxy"
             android:title="@string/title_pref_per_app_proxy" />
@@ -22,25 +25,29 @@
         <!--android:summary="@string/summary_pref_mux_enabled"-->
         <!--android:title="@string/title_pref_mux_enabled" />-->
         <CheckBoxPreference
-                android:key="pref_local_dns_enabled"
-                android:summary="@string/summary_pref_local_dns_enabled"
-                android:title="@string/title_pref_local_dns_enabled" />
+            android:icon="@drawable/baseline_dns_24"
+            android:key="pref_local_dns_enabled"
+            android:summary="@string/summary_pref_local_dns_enabled"
+            android:title="@string/title_pref_local_dns_enabled" />
 
         <CheckBoxPreference
-                android:key="pref_fake_dns_enabled"
-                android:summary="@string/summary_pref_fake_dns_enabled"
-                android:title="@string/title_pref_fake_dns_enabled" />
+            android:icon="@drawable/baseline_dns_24"
+            android:key="pref_fake_dns_enabled"
+            android:summary="@string/summary_pref_fake_dns_enabled"
+            android:title="@string/title_pref_fake_dns_enabled" />
 
         <EditTextPreference
-                android:key="pref_local_dns_port"
-                android:summary="10853"
-                android:inputType="number"
-                android:title="@string/title_pref_local_dns_port" />
+            android:inputType="number"
+            android:icon="@drawable/baseline_numbers_24"
+            android:key="pref_local_dns_port"
+            android:summary="10853"
+            android:title="@string/title_pref_local_dns_port" />
 
         <EditTextPreference
-                android:key="pref_vpn_dns"
-                android:summary="@string/summary_pref_remote_dns"
-                android:title="@string/title_pref_vpn_dns" />
+            android:key="pref_vpn_dns"
+            android:icon="@drawable/baseline_dns_24"
+            android:summary="@string/summary_pref_remote_dns"
+            android:title="@string/title_pref_vpn_dns" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/title_pref_routing">
@@ -49,16 +56,19 @@
             android:entries="@array/routing_domain_strategy"
             android:entryValues="@array/routing_domain_strategy"
             android:key="pref_routing_domain_strategy"
+            android:icon="@drawable/baseline_domain_24"
             android:summary="%s"
             android:title="@string/title_pref_routing_domain_strategy" />
 
         <Preference
             android:key="pref_routing_custom"
+            android:icon="@drawable/baseline_rule_24"
             android:summary="@string/title_pref_routing_custom"
             android:title="@string/title_pref_routing_custom" />
 
         <ListPreference
             android:defaultValue="0"
+            android:icon="@drawable/baseline_rule_24"
             android:entries="@array/routing_mode"
             android:entryValues="@array/routing_mode_value"
             android:key="pref_routing_mode"
@@ -71,42 +81,55 @@
 
         <CheckBoxPreference
             android:key="pref_prefer_ipv6"
+            android:icon="@drawable/baseline_alt_route_24"
             android:summary="@string/summary_pref_prefer_ipv6"
             android:title="@string/title_pref_prefer_ipv6" />
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="pref_proxy_sharing_enabled"
+            android:icon="@drawable/baseline_lan_24"
             android:summary="@string/summary_pref_proxy_sharing_enabled"
             android:title="@string/title_pref_proxy_sharing_enabled" />
 
         <CheckBoxPreference
             android:defaultValue="false"
+            android:icon="@drawable/baseline_lock_open_24"
             android:key="pref_allow_insecure"
             android:summary="@string/summary_pref_allow_insecure"
             android:title="@string/title_pref_allow_insecure" />
 
         <EditTextPreference
-            android:key="pref_socks_port"
-            android:summary="10808"
             android:inputType="number"
+            android:key="pref_socks_port"
+            android:summary="10808" android:icon="@drawable/baseline_numbers_24"
             android:title="@string/title_pref_socks_port" />
 
         <EditTextPreference
-            android:key="pref_http_port"
-            android:summary="10809"
             android:inputType="number"
+            android:key="pref_http_port" android:icon="@drawable/baseline_numbers_24"
+            android:summary="10809"
             android:title="@string/title_pref_http_port" />
 
         <EditTextPreference
-            android:key="pref_remote_dns"
+            android:key="pref_remote_dns" android:icon="@drawable/baseline_dns_24"
             android:summary="@string/summary_pref_remote_dns"
             android:title="@string/title_pref_remote_dns" />
 
         <EditTextPreference
-                android:key="pref_domestic_dns"
-                android:summary="@string/summary_pref_domestic_dns"
-                android:title="@string/title_pref_domestic_dns" />
+            android:key="pref_domestic_dns"
+            android:summary="@string/summary_pref_domestic_dns"
+            android:icon="@drawable/baseline_dns_24"
+            android:title="@string/title_pref_domestic_dns" />
+
+        <ListPreference
+            android:defaultValue="VPN"
+            android:entries="@array/mode_entries"
+            android:entryValues="@array/mode_value"
+            android:key="pref_mode"
+            android:icon="@drawable/baseline_vpn_lock_24"
+            android:summary="%s"
+            android:title="@string/title_mode" />
 
         <ListPreference
             android:defaultValue="warning"
@@ -114,15 +137,14 @@
             android:entryValues="@array/core_loglevel"
             android:key="pref_core_loglevel"
             android:summary="%s"
+            android:icon="@drawable/baseline_description_24"
             android:title="@string/title_core_loglevel" />
 
-        <ListPreference
-                android:defaultValue="VPN"
-                android:entries="@array/mode_entries"
-                android:entryValues="@array/mode_value"
-                android:key="pref_mode"
-                android:summary="%s"
-                android:title="@string/title_mode" />
+        <Preference
+            android:key="pref_core_logcat"
+            android:summary="@string/setting_logcat_info"
+            android:icon="@drawable/baseline_description_24"
+            android:title="@string/title_logcat" />
 
         <ListPreference
             android:defaultValue="auto"
@@ -130,9 +152,11 @@
             android:entryValues="@array/language_select_value"
             android:key="pref_language"
             android:summary="%s"
+            android:icon="@drawable/baseline_language_24"
             android:title="@string/title_language" />
 
         <CheckBoxPreference
+            android:icon="@drawable/outline_delete_24"
             android:key="pref_confirm_remove"
             android:summary="@string/summary_pref_confirm_remove"
             android:title="@string/title_pref_confirm_remove" />
