--- a/V2rayNG/app/src/main/res/layout/item_recycler_main.xml
+++ b/V2rayNG/app/src/main/res/layout/item_recycler_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/server_height"
     android:layout_marginTop="5dp"
+    android:layoutDirection="ltr"
     android:layout_marginBottom="5dp"
     android:background="@drawable/server_item_bg"
     android:gravity="center_vertical">
