--- a/V2rayNG/app/src/main/res/layout/fragment_login.xml
+++ b/V2rayNG/app/src/main/res/layout/fragment_login.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_goral_vpn" />
+        app:srcCompat="@drawable/ic_intro_logo" />
 
     <TextView
         android:id="@+id/tx_goral_vpn"
