--- a/V2rayNG/app/src/main/res/layout/activity_privacy.xml
+++ b/V2rayNG/app/src/main/res/layout/activity_privacy.xml
@@ -42,6 +42,7 @@
         android:gravity="center_vertical"
         android:justificationMode="inter_word"
         android:lineHeight="25dp"
+        android:maxLines="5"
         android:text="@string/policy_description"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
