--- a/V2rayNG/app/src/main/res/values-fa/strings_name.xml
+++ b/V2rayNG/app/src/main/res/values-fa/strings_name.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">وی گذر</string>
-    <string name="app_name_beta" translatable="false">VGozar Beta</string>
+    <string name="app_name" translatable="false">Goral VPN</string>
+    <string name="app_name_beta" translatable="false">Goral Beta</string>
 </resources>
