--- a/V2rayNG/app/src/main/res/drawable/btn_blue.xml
+++ b/V2rayNG/app/src/main/res/drawable/btn_blue.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="10dp"/>
-    <solid android:color="@color/colorAccent"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item  android:state_enabled="false">
+        <shape>
+            <corners android:radius="10dp"/>
+            <solid android:color="@color/colorUnselected"/></shape>
+    </item>
+    <item >
+        <shape>
+            <corners android:radius="10dp"/>
+            <solid android:color="@color/colorAccent"/></shape>
+    </item>
+</selector>
